--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="description" content="La chouette agence à Lyon. Agence de communication et de conception de site web. Nos graphistes développent votre site internet sur mesure et votre identité visuelle. Nos webdesigners vous accompagnent de la création au référencement du site ">
-	<meta title="La Chouette agence de Lyon">
+	<meta name="title" content="La Chouette agence de Lyon">
 	<meta name="robots" content="index, follow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
@@ -118,7 +118,7 @@
 		</div>
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-				<blockquote>La chouette agence est une excellente agence web !<br>Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site.<br>Cela nous a aidé à doubler nos ventes en ligne à Lyon.</blockquote>
+				<blockquote>La chouette agence est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon.</blockquote>
 				<cite>Maxime Guilbard, PDG de &Agrave; vos fourchettes</cite>
 			</div>
 		</div>
@@ -200,7 +200,7 @@
 <div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
 	<div class="container bloc-lg">
 		<div class="row">
-			<h2 class="mg-md text-center tc-white">
+			<h2 class="mg-md text-center white">
 				Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 			</h2>
 			<div class="col-sm-12 text-center">
@@ -221,7 +221,7 @@
 				</p>
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
-						<div class="text-center">
+						<div class="text-center white">
 							<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
 						</div>
 					</div>
