correction W3C / interaction mobile et contraste

--- a/contact.html
+++ b/contact.html
@@ -60,10 +60,10 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12">
-				<h1 class="text-center hero-bloc-text">
+				<h1 class="text-center hero-bloc-text white">
 					Parlons web design !
 				</h1>
-				<p class="text-center mg-lg tight-width-whitespace">
+				<p class="text-center mg-lg tight-width-whitespace white">
 					Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br>
 					Parlez-nous de votre projet en complétant le formulaire ci-dessous.
 				</p>
@@ -78,7 +78,7 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-6">
-				<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
+				<form id="form_1" novalidate>
 					<div class="form-group">
 						<label for="name">
 							Nom
@@ -118,13 +118,13 @@
 
 
 <!-- Footer - bloc-8 -->
-<div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
+<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-sm-12">
 				<p class="text-center white">
 					La chouette agence - Agence web basée à Lyon.<br>2 place Sathonay 69001 Lyon<br>
-					<a href="mailto:contact@lachouetteagence.com">contact@lachouetteagence.com</a><br>Ouvert de 9h à 18h, du lundi au vendredi<br>
+					<a href="mailto:contact@lachouetteagence.com" class="white">contact@lachouetteagence.com</a><br>Ouvert de 9h à 18h, du lundi au vendredi<br>
 				</p>
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
@@ -151,7 +151,7 @@
 			</div>
 		</div>
 	</div>
-</div>
+</footer>
 <!-- Footer - bloc-8 END -->
 
 </div>
